re-enabled pointer events on inactive pagination for quicker navigation, disabled on active (as it was pointless) and using z-index to prevent pagination being pressed when trying to press prev/next.

--- a/src/components/EpisodesNav/styles.scss
+++ b/src/components/EpisodesNav/styles.scss
@@ -18,6 +18,7 @@
 			font-size: 1.75rem;
 			width: 1em;	
 			height: 1.42em;
+			z-index: 2;
 		}
 
 		.prev {
@@ -47,13 +48,12 @@
 				&.inactive {
 					font-size: 1.15em;
 					font-weight: normal;
-					pointer-events: none; //prevents overlap with prev/next
 				}
 
 				&.active {
 					font-size: 1.5em;
 					font-weight: bold;
-					pointer-events: all;
+					pointer-events: none;
 				}
 
 				.paginationLink {
